# InnerClaude

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  example_event.json  pyproject.toml
.github/workflows/: build_push_docker.yaml  continuous-deployment.yaml  terraform.yaml
InnerClaude/app/: InnerClaude.py  main.py
claude-local/app/: config_env.py  main.py  trim_context.py
infra/terraform/: aws_key_pair.tf  ec2.tf  provider.tf  security_groups.tf  user_data.sh  variables.tf
